src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#nav-bar {
  display: -ms-grid;
  display: grid;
  grid-template-columns: 1fr 5fr 1fr;
  margin: auto;
  background-color: #759eb8;
  height: 120px;
}

#logo {
  height: 90px;
  border-radius: 100px;
  margin: 5px;
}

#site-nav,
#account-links {
  margin: auto;
}

#hr-one {
  height: 8px;
}

.feature-block h3,
p,
img {
  text-align: left;
}
.feature-block h3 {
  margin-top: 10px;
}
.feature-block p {
  margin-top: 15px;
  clear: left;
}
.feature-block .feature-icon {
  width: 40px;
  margin-bottom: 0px;
  margin-right: 10px;
  float: left;
}

.feature-list {
  display: flex;
  flex-wrap: wrap;
  margin: 30px;
  justify-content: center;
}
.feature-block {
  margin-left: 3%;
  margin-right: 3%;
  width: 22%;
}
.home-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 30px;
  height: 400px;
  width: 70%;
}

#avatar {
  height: 80px;
  width: 80px;
  border-radius: 100%;
}

#navbar-avatar {
  display: flex;
  flex-direction: column;
}

#log-out {
  text-align: center;
}

a {
  margin-left: 5px;
  margin-right: 5px;
}

.game-box-image {
  height: 200px;
}

.game-info-card,
.game-info-card p {
  text-align: center;
}

.game-info-card h6 {
  margin-top: 0px;
}

.game-info-card h3 {
  margin-bottom: 10px;
}

#settings-avatar {
  height: 300px;
  width: 300px;
  border-radius: 100%;
}

#top-settings {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#by-genre {
  width: 400px;
  height: 400px;
  margin-left: 50px;
}
#by-title {
  width: 400px;
  height: 400px;
  margin-left: 50px;
}

#most-played {
  display: flex;
  margin-left: 60px;
}

.event-form-game-button {
  margin-left: auto;
  margin-right: auto;
  margin-top: 0px;
}

.game-selection-image {
  height: 110px;
  width: auto;
  margin: auto;
}
#vote-card-container {
  border: 3px;
  border-color: #282c34;
  border-radius: 5%;
  display: flex;
  align-items: center;
  justify-content: center;
  justify-items: center;
}

#vote-card-container > h3 {
  margin: 0px;
}

#vote-buttons {
  display: flex;
  justify-content: center;
}

.vote-card-image {
  height: 100px;
}

#vote-card {
  height: 300px;
  width: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  text-align: center;
}

#game-suggestions {
  display: flex;
  margin: auto;
}

#guest-list-select {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#guest-list-form {
  align-self: center;
  align-items: center;
  display: flex;
  flex-direction: column;
  text-align: center;
}

#guest-list-form > h3 {
  text-align: center;
}

#guest-list-button {
  margin-top: 60px;
  width: 120px;
}

.vote-header {
  text-align: center;
}

#vote-submit {
  margin: auto;
}

#vote-form-label,
#guest-list-dropdown,
#guest-list-select {
  margin-left: 10px;
  margin-right: 10px;
}

#guest-select {
  display: flex;
}

#collection-container {
  display: flex;
  justify-content: space-around;
  margin-top: 60px;
}
.collection-header {
  text-align: center;
  margin-top: 30px;
}

.collection-display {
  display: grid;
  grid-template-columns: 1fr 6fr;
}

.new-event-link {
  font-size: 30px;
  text-decoration: none;
  font-weight: bolder;
}

.upcoming-heading {
  margin-top: 20px;
}

.game-night-menu-container {
  text-align: center;
}

.game-night-event-container {
  padding: 8px;
  margin: 8px;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
}

.game-night-event-container * {
  text-align: center;
}

.event-container-finalized {
  border-color: green;
  border-width: 3px;
}

.event-container-voting {
  border-color: rgb(252, 220, 38);
  border-width: 3px;
}

.vote-results-container,
.selected-game-container {
  clear: left;
  padding: 10px;
}
.vote-results-container img {
  float: left;
  margin-right: 10px;
}

.vote-results-container h6 {
  margin-left: 10px;
  margin-top: 5px;
}

/* .selected-game-container img {
  float: left;
  margin-right: 10px;
} */

.selected-game-container h6 {
  margin-left: 10px;
  margin-top: 5px;
}

#vote-form-buttons {
  display: flex;
  justify-content: center;
}

#vote-form-buttons > Button {
  margin-left: 10px;
  margin-right: 10px;
}

#rsvp-form {
  align-self: center;
  display: grid;
  margin-top: 100px;
}

#rsvp-form > Button {
  width: 70px;
  margin: 8px 100px 8px 100px;
}

#email-confirm {
  margin-top: 60px;
}

.gamenight-banner {
  text-align: center;
}

.frowny-vote,
.neutral-vote,
.smiley-vote {
  margin: 3px;
}

.frowny-vote:active,
.neutral-vote:active,
.smiley-vote:active {
  outline: none;
  box-shadow: none;
  background-color: green;
}

#feedback-form {
  text-align: center;
}

#game-feedback {
  justify-content: center;
  margin-top: 40px;
}

#feedback-game-cards {
  display: flex;
  align-items: center;
  justify-content: center;
  justify-items: center;
}

#feedback-submit {
  margin-top: 40px;
  margin-bottom: 40px;
}

#game-feedback > h3 {
  margin-top: 40px;
  margin-bottom: 10px;
}

.menu-image {
  height: 50px;
  width: 50px;
}

.create-contact-form {
  padding: 10px;
  margin: 10px;
}

.new-event-form {
  margin-left: 20px;
  margin-top: 20px;
  margin-bottom: 10px;
}

.contact-button-group {
  text-align: center;
  margin-left: 20px;
  margin-top: 10px;
  margin-bottom: 10px;
}

#game-menu-button {
  margin-left: 20px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.guest-picker-container,
.game-picker-container {
  display: flex;
  margin-left: 20px;
}

.guest-picker-container {
  float: left;
}
.games-guests-container {
  display: flex;
}

.contact-button-group-container {
  float: left;
}

.game-picker-title {
  margin-right: 15px;
}

.gn-owner-view-container {
  margin-left: 20px;
  margin-top: 20px;
}
.voting-and-rsvp-container {
  display: flex;
  margin-left: 20px;
  margin-top: 10px;
  /* justify-content: space-evenly; */
}

.finalize-cancel-buttons-container {
  margin-top: 10px;
}

#avatar-field {
  margin-top: 30px;
}

#login-links {
  display: grid;
  grid-template-rows: 1fr 1fr;
}

.game-night-menu-container * {
  margin-left: auto !important;
  margin-right: auto !important;
}

#game-knight-banner {
  font-family: 'LocalBreweryFour-Regular';
  color: #334195;
  font-size: 18pt;
  font-weight: bolder;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 5px;
  margin-right: 5px;
  width: 105px;
}

#game-knight {
  width: 300px;
  display: flex;
  justify-content: center;
}

#app-nav-bar {
  background-color: #759eb8;
}

#hr-1 {
  background-color: #334195;
  height: 10px;
  border: none;
  margin: 0;
}

#hr-2 {
  background-color: #ffdd4a;
  height: 10px;
  border: none;
  margin: 0;
}

#site-nav > a {
  text-decoration: none;
  color: #41463d;
  font-size: larger;
  font-weight: bolder;
}

.search-result-link {
  text-decoration: none;
  color: #41463d;
  font-size: larger;
  font-weight: bolder;
}

#account-links > a {
  text-decoration: none;
  color: #41463d;
  font-size: larger;
  font-weight: bolder;
}

#log-out {
  text-decoration: none;
  color: #41463d;
  font-size: larger;
  font-weight: bolder;
}

#play-stats-page {
  text-align: center;
}

#finalized-event {
  text-align: center;
}

#registration-errors {
  color: red;
}

#wishlist-header {
  text-align: center;
  margin-top: 40px;
  margin-bottom: 40px;
}

